[project]
name = "raser-mri-ai"
version = "1.0.0"
description = "This project provides deep learning tools and scripts for training, evaluating, and reconstructing MRI images using the RASER AI framework."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "ray[tune] (>=2.47.0,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
